Fixed alignment of wrapper

--- a/app/src/client/stylesheets/cray.styl
+++ b/app/src/client/stylesheets/cray.styl
@@ -73,7 +73,7 @@ h1 span.hyphen
 
 #container
   position relative
-  width 670px
+  width 655px
   margin 0 auto
   padding 0 60px
   overflow hidden
